# Introduksjon-til-kunstig-intelligens

./: .gitignore  README.md  README.txt
Flashcards/: README.md  flashcards.py  multiple_choice.py
Gamle obliger/oblig1_2024/: MA1.ipynb
Labs/Lab1/: Lab1.ipynb
Labs/Lab2/: Lab2.ipynb
Labs/Lab3/: lab3.ipynb
Labs/Lab3/data/: Titanic_cleaned.csv
Labs/Lab4/: lab4.ipynb  pyproject.toml
Labs/Lab5/: Lab5.ipynb
Labs/Lab6/: Lab6.ipynb
course material/: DAVE3625-MachineLearning1.txt  DIKU 002 - History of AI-p2.txt  DIKU 004 - Supervised Machine Learning.txt
oblig1/: Grc_Concat_df.csv  MA1.ipynb  pyproject.toml
oblig1_2024/: MA1.ipynb
oblig1_2025/: MA1.ipynb
oblig2/data/: Passengerdata.ipynb
oblig2_2025/: Mandatory assigment 2.ipynb  main.py  more fun.ipynb  pyproject.toml
oblig2_2025/data_2024/: Passengerdata.ipynb
