[project]
name = "oblig2-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.0.0",
    "jupyter>=1.1.1",
    "jupyterlab>=4.4.9",
    "notebook>=7.4.7",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "scipy>=1.16.2",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.5",
]
